[gd_scene load_steps=6 format=3 uid="uid://c2k34445t2qkx"]

[ext_resource type="Script" path="res://components/Tavern/tavern.gd" id="1_8hpd2"]
[ext_resource type="Texture2D" uid="uid://eug3v4kyaqf5" path="res://assets/inn.png" id="1_ahf2w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bc4gl"]
size = Vector2(222, 163)

[sub_resource type="Gradient" id="Gradient_ogrkd"]
colors = PackedColorArray(0.4, 0.4, 0.4, 1, 0.4, 0.4, 0.4, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nk3dj"]
gradient = SubResource("Gradient_ogrkd")

[node name="Tavern" type="Area2D"]
script = ExtResource("1_8hpd2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ahf2w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_bc4gl")

[node name="ManageButton" type="Button" parent="."]
offset_left = -112.0
offset_top = -126.0
offset_right = 112.0
offset_bottom = -95.0
text = "Manage"

[node name="UI" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="UI"]
position = Vector2(-0.499999, 1)
scale = Vector2(3.48438, 2.5625)
texture = SubResource("GradientTexture2D_nk3dj")

[node name="Label" type="Label" parent="UI"]
offset_left = -26.0
offset_top = -78.0
offset_right = 28.0
offset_bottom = -55.0
text = "Tavern
"

[node name="UpgradeButton" type="Button" parent="UI"]
offset_left = -83.0
offset_top = -51.0
offset_right = 85.0
offset_bottom = -20.0
text = "Level 1 Upgrade $ 50"

[node name="GetHeroLabel" type="Label" parent="UI"]
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 11.0
text = "Hero
"

[node name="GetNewHeroButton" type="Button" parent="UI"]
offset_left = -80.0
offset_top = 28.0
offset_right = 79.0
offset_bottom = 59.0
text = "Get new Hero $ 200
"

[node name="CloseButton" type="Button" parent="UI"]
offset_left = 90.0
offset_top = -77.0
offset_right = 107.0
offset_bottom = -46.0
text = "x"

[connection signal="pressed" from="ManageButton" to="." method="_on_manage_button_pressed"]
[connection signal="pressed" from="UI/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="UI/GetNewHeroButton" to="." method="_on_get_new_hero_button_pressed"]
[connection signal="pressed" from="UI/CloseButton" to="." method="_on_close_button_pressed"]
